--- a/site/сайт/html/Gl.html
+++ b/site/сайт/html/Gl.html
@@ -134,23 +134,19 @@
   <section class="parallax-window aaaa" data-parallax="scroll" data-image-src="../img/business-g3eabaa4df_1920.jpg">
     <div class="imgprog">
         <div class="imgprog1">
-            <div class="pp1"><p class="ppr1">sadasdasdasd</p></div>
-            <div class="pp2"><img class="pr1" src="../img/прога1.jpg" alt=""></div>
+            <div class="pp1"><p class="ppr1">Часто у человека каша в голове и он не знает с чего начать выполнять задачу. Разделив задачу на подзадачи, у вас пропадет путаница и вы легко выполните задачу. В приложении список подзадач можно просматривать.</p></div>
+            <div class="pp2"><img class="pr1" src="../img/фотопр1.jpg" alt=""></div>
         </div>
         <div class="imgprog1">
-            <div class="pp2"><img class="pr1" src="../img/прога1.jpg" alt=""></div>
-            <div class="pp1"><p class="ppr1">sadasdasdasd</p></div>
-        </div>
-        <div class="imgprog1">
-            <div class="pp1"><p class="ppr1">sadasdasdasd</p></div>
-            <div class="pp2"><img class="pr1" src="../img/прога1.jpg" alt=""></div>
+            <div class="pp2"><img class="pr1" src="../img/фотопр3.jpg" alt=""></div>
+            <div class="pp1"><p class="ppr1">Приложение позволяет эффективно организовать свою студенческую жизнь. Следите за расписанием занятий и зачетов. В заметках можно фиксировать домашнее задание, лабораторные работы и просто полезную информацию.</p></div>
         </div>
     </div>
   </section>
 
     <div class="our_pluses">
         <p class="opisanie2">
-           <b> Приложение позволяет эффективно организовать свою студенческую жизнь. Следите за расписанием занятий и зачетов. В заметках можно фиксировать домашнее задание, лабораторные работы и просто полезную информацию.</b>
+           <b>Данное приложение позволяет создавать индивидуальное расписание занятий для каждого студента, записывать домашнее задание и оставлять заметки на определенную дату</b>
         </p>
     </div>
 
